# hyundai_wia

./: .gitignore  README.md  RULES.md  pyproject.toml  run.py
app/agents/: interface.py
app/agents/adaptor/: llm_interface.py  openai_adaptor.py  perplexity_search_adaptor.py
app/agents/context/: schema.py  token_manager.py  utils.py
app/agents/domains/: __init__.py  base.py  react.py
app/agents/mcp/: mcp.json  mcp_manager.py
app/agents/sandbox/: __init__.py  client.py
app/agents/tools/: __init__.py  mcp_client.py
app/common/: logger.py  utils.py
app/common/exceptions/: custom_exceptions.py  enums.py
app/common/llm_clients/: interface.py  langchain_clients.py  langchain_interface.py  openai_client.py
app/common/messaging/: message_dispatcher.py  message_queue.py
app/common/repositories/: interface.py  mongo_base_repository.py
app/config/: env_config.py  local.yaml  prompts.yaml  utils.py
app/domains/: __init__.py  containers.py  routers.py  server.py
app/domains/chat/: containers.py
app/domains/document/: containers.py  enums.py
app/domains/index/: apis.py  schemas.py
ml/: merge_for_vllm.py  simple_inference.py  train.py  train_knowledge.py  train_knowledge_unsloth.py  upload_to_hf.py
ml/data/: HACS_api_doc.md  MCS_api_doc.md  acs_alarm_qwen_conversation_format.json  acs_alarm_textbook_question.json  amr_guide_textbook_merged.json  amr_guide_textbook_question.json
ml/data/legacy/: acs_alarm_textbook.json  acs_alarm_textbook_merged.json  amr_guide_qwen_conversation_format.json  amr_guide_textbook.json  error_scenario_textbook_merged.json  error_scenario_textbook_question.json  error_scenario_textbook_qwen_conversation_format.json  hacs_textbook_merged.json  hacs_textbook_question.json  hacs_textbook_qwen_conversation_format.json  mcs_textbook_question.json  mcs_textbook_qwen_conversation_format.json
ml/data/step1/: HACS_api_doc.md  HACS_preprocessed.json  MCS_api_doc.md  MCS_preprocessed.json  acs_alarm.md  acs_alarm_preprocessed.json  acs_alarm_qwen_conversation_format.json  acs_alarm_textbook.json  amr_guide.md  amr_guide_preprocessed.json  amr_guide_qwen_conversation_format.json  amr_guide_textbook.json  error_scenario.md  error_scenario_preprocessed.json  (+9 more)
ml/data_processing/: prompt.py  step1-4_merge.ipynb  step_1-1_preprocessing.ipynb  step_1-2_synthetic_textbook.ipynb  step_1-3_formatting.ipynb
ml/utils/: argumentations.py  util.py
(+49 files in other folders)
